overflow fixed

--- a/style.css
+++ b/style.css
@@ -136,6 +136,6 @@ i:hover{
     }
     footer{
         align-self: flex-end;
-        margin-top: 4em;
+        margin-top: 3em;
     }
 }
